--- a/app/static/style.css
+++ b/app/static/style.css
@@ -303,6 +303,7 @@ small { font-size: 13px; line-height: 1.5; color: var(--text-secondary); }
     cursor: pointer;
 }
 
+
 /* --- 8. 日志页面特定样式 --- */
 .logs-controls {
     display: flex;
@@ -393,9 +394,9 @@ small { font-size: 13px; line-height: 1.5; color: var(--text-secondary); }
     cursor: pointer;
     color: var(--text-primary);
     font-weight: 500;
+    text-decoration: none;
 }
 .file-manager .data-table .item-name:hover span {
-    text-decoration: underline;
     color: var(--brand-accent);
 }
 .file-manager .data-table th.actions,
@@ -456,4 +457,62 @@ small { font-size: 13px; line-height: 1.5; color: var(--text-secondary); }
 /* 上传进度条样式 */
 .swal2-progress-bar {
     background: var(--brand-accent) !important;
+}
+
+.breadcrumb-dropdown {
+    position: relative;
+    display: inline-block;
+}
+.breadcrumb-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--bg-primary);
+    min-width: 220px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
+    z-index: 10;
+    border-radius: var(--border-radius-md);
+    border: 1px solid var(--border-default);
+    overflow: hidden;
+}
+.breadcrumb-dropdown-content a {
+    color: var(--text-primary);
+    padding: var(--space-3) var(--space-4);
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: var(--space-2);
+}
+.breadcrumb-dropdown-content a:hover {background-color: var(--bg-secondary)}
+.breadcrumb-dropdown:hover .breadcrumb-dropdown-content {
+    display: block;
+}
+.breadcrumb-root {
+     cursor: pointer;
+     color: var(--brand-accent);
+     font-weight: 500;
+}
+.upload-options {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 10;
+    background-color: var(--bg-primary);
+    border-radius: var(--border-radius-md);
+    border: 1px solid var(--border-default);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
+    overflow: hidden;
+    margin-top: var(--space-2);
+    min-width: 150px; 
+}
+.upload-options .btn {
+    border-radius: 0;
+    width: 100%;
+    justify-content: flex-start;
+    border: none;
+    padding-top: var(--space-3);
+    padding-bottom: var(--space-3);
+}
+.upload-options .btn:hover {
+    background-color: var(--bg-secondary);
 }
